# swagger.yaml
@@ -23,24 +23,24 @@ paths:
           type: string
           maxLength: 20
           description: タイトル検索用のワード
-        - in: query
-          name: per_page
-          type: number
-          description: 取得件数
-          exclusiveMaximum: 100
-        - in: query
-          name: exclusive_start_key
-          type: string
-          description: 次ページの開始位置
+        # - in: query
+        #   name: per_page
+        #   type: number
+        #   description: 取得件数
+        #   exclusiveMaximum: 100
+        # - in: query
+        #   name: exclusive_start_key
+        #   type: string
+        #   description: 次ページの開始位置
       responses:
         200:
           description: Successfull Operation 
           schema:
             type: object
             properties: 
-              exclusive_start_key:
-                type: object
-                description: 次ページがある場合次の開始位置のObject
+              # exclusive_start_key:
+                # type: object
+                # description: 次ページがある場合次の開始位置のObject
               data:
                 type: array
                 items:
@@ -69,27 +69,27 @@ paths:
           schema:
             $ref: "#/definitions/Coupon"
 
-  /coupons/{id}/qrcode:
-    get:
-      summary: クーポンのQRコードを返す
-      tags:
-        - coupon
-      produces:
-        - image/jpeg
-      parameters:
-        - in: path
-          required: true
-          name: id
-          type: string
-          description: クーポンID
-      responses:
-        200:
-          description: QR画像
-          schema:
-            type: string
-            format: byte
-        404:
-          description: 検索結果なし
+  # /coupons/{id}/qrcode:
+  #   get:
+  #     summary: クーポンのQRコードを返す
+  #     tags:
+  #       - coupon
+  #     produces:
+  #       - image/jpeg
+  #     parameters:
+  #       - in: path
+  #         required: true
+  #         name: id
+  #         type: string
+  #         description: クーポンID
+  #     responses:
+  #       200:
+  #         description: QR画像
+  #         schema:
+  #           type: string
+  #           format: byte
+  #       404:
+  #         description: 検索結果なし
       
 definitions:
   Coupon:
@@ -110,6 +110,10 @@ definitions:
       thumnail_url:
         type: string
         description: クーポンの画像
-        example: "https://{s3のホスティングURL}"
+        example: "https://{CloudFrontURL}"
+      qrcode_url:
+        type: string
+        description: クーポンQRCodeの画像URL
+        example: "https://{CloudFrontURL}"
 
 
